--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "scope": "./",
   "icons": [
     {
-      "src": "https://picsum.photos/seed/civilpro192/192/192",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://picsum.photos/seed/civilpro512/512/512",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
